--- a/Bear/Base.lproj/Main.storyboard
+++ b/Bear/Base.lproj/Main.storyboard
@@ -499,11 +499,11 @@
             </objects>
             <point key="canvasLocation" x="2022" y="1773"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="3yT-c5-IZv">
             <objects>
                 <navigationController id="Aus-Mf-NuD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="MmN-jV-Zb4"/>
+                    <tabBarItem key="tabBarItem" systemItem="contacts" id="MmN-jV-Zb4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LbN-f7-Ecd">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
