--- a/Bear/Base.lproj/Main.storyboard
+++ b/Bear/Base.lproj/Main.storyboard
@@ -835,14 +835,12 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JR9-mP-7Ke">
-                                            <rect key="frame" x="298" y="13" width="65" height="30"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="65" id="nem-Tx-Jri"/>
-                                            </constraints>
+                                            <rect key="frame" x="319" y="13" width="44" height="30"/>
                                             <state key="normal" title="Follow"/>
                                         </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="U1n-FG-Enb" secondAttribute="trailing" constant="20" symbolic="YES" id="2rp-bQ-BEJ"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="U1n-FG-Enb" secondAttribute="bottom" constant="9" id="3H7-2d-3Pe"/>
                                         <constraint firstAttribute="bottom" secondItem="l9I-QT-Ciw" secondAttribute="bottom" constant="10" id="8mK-H2-YJP"/>
                                         <constraint firstAttribute="bottom" secondItem="JR9-mP-7Ke" secondAttribute="bottom" constant="13" id="Dte-Gt-Zol"/>
@@ -866,7 +864,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="577.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="Mle-2o-hUa">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="Mle-2o-hUa">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="Mle-2o-hUa" secondAttribute="height" multiplier="1:1" id="scH-zp-FTR"/>
@@ -954,16 +952,19 @@
                                         <constraint firstItem="sHC-vg-mdY" firstAttribute="top" secondItem="rcE-Gn-j3f" secondAttribute="bottom" constant="8" id="9mi-l3-blN"/>
                                         <constraint firstItem="GDb-RB-q5R" firstAttribute="top" secondItem="vb5-jW-mfl" secondAttribute="bottom" constant="12" id="EKh-Ws-qBx"/>
                                         <constraint firstItem="GDb-RB-q5R" firstAttribute="leading" secondItem="Tjg-Id-60M" secondAttribute="leading" constant="12" id="EYe-Vl-hU1"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6rY-XQ-ZWB" secondAttribute="trailing" constant="20" symbolic="YES" id="Ngk-Xq-4Hf"/>
                                         <constraint firstItem="6rY-XQ-ZWB" firstAttribute="leading" secondItem="sHC-vg-mdY" secondAttribute="leading" id="YAJ-8y-6eS"/>
                                         <constraint firstAttribute="bottom" secondItem="6rY-XQ-ZWB" secondAttribute="bottom" constant="8" id="Yv6-wI-7Ql"/>
                                         <constraint firstAttribute="trailing" secondItem="vb5-jW-mfl" secondAttribute="trailing" constant="12" id="ZbU-36-5Ip"/>
                                         <constraint firstItem="Mle-2o-hUa" firstAttribute="top" secondItem="Tjg-Id-60M" secondAttribute="top" id="cB3-dz-W85"/>
                                         <constraint firstItem="vb5-jW-mfl" firstAttribute="top" secondItem="4mP-4H-i5L" secondAttribute="bottom" constant="12" id="f9X-Qa-RZW"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sHC-vg-mdY" secondAttribute="trailing" constant="20" symbolic="YES" id="hUg-9d-Lpc"/>
                                         <constraint firstItem="4mP-4H-i5L" firstAttribute="top" secondItem="Mle-2o-hUa" secondAttribute="bottom" constant="12" id="iE6-dq-RDW"/>
                                         <constraint firstItem="rcE-Gn-j3f" firstAttribute="leading" secondItem="Tjg-Id-60M" secondAttribute="leading" constant="12" id="lux-vb-DZc"/>
                                         <constraint firstItem="6rY-XQ-ZWB" firstAttribute="top" secondItem="sHC-vg-mdY" secondAttribute="bottom" constant="8" id="nXW-Jc-NRL"/>
                                         <constraint firstItem="vb5-jW-mfl" firstAttribute="leading" secondItem="Tjg-Id-60M" secondAttribute="leading" constant="12" id="o1r-m7-an5"/>
                                         <constraint firstItem="Mle-2o-hUa" firstAttribute="leading" secondItem="Tjg-Id-60M" secondAttribute="leading" id="q4u-bz-y7s"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GDb-RB-q5R" secondAttribute="trailing" constant="20" symbolic="YES" id="ut5-yN-ohg"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
